# leptos-website-maj

./: .dockerignore  BUILD.md  Cargo.toml  Dockerfile  Dockerfile.bk  Dockerfile.builder  LICENSE  README.md  fly.toml  notes.md  package-lock.json
.cargo/: config.toml
leptos_image/: Cargo.toml  README.md
leptos_image/example/image-example/: Cargo.toml
leptos_image/example/image-example/src/: main.rs
leptos_image/src/: image.rs  introspect.rs  provider.rs
public/data_json/: shows.json  yt_videos.json
public/fonts/ecoplanet-font/: info.txt
public/fonts/jakobs-handwriting-font/: info.txt
public/fonts/jakobs-handwriting-font/misc/: Jakob's Handwriting - Terms Of Use.url
public/shows/: shows.json
public/styles/: audio_player.css  audio_player_center.css  index.css  routes.css
public/styles/fonts/: brianjames.css  ibm-plex.css  squabslab.css
public/video-js/: videojs-matrix.css
public/videos/: hand_in_a_hat.m4v  hexagonal_mirrors.m4v  philosopher_stoned.m4v
scripts/: update_json.sh
src/: app.rs  audio.rs  error.rs  error_template.rs  fallback.rs  fileserv.rs  head.rs  lib.rs  main.rs  routes.rs  serve.rs
src/audio/: list.rs  mod.rs  player.rs
src/routes/: about.rs  error.rs  home.rs  media.rs  mod.rs  shows.rs
style/: about.scss  audio_player.scss  home.scss  main.scss  media.scss  shows.scss
